# madrid_houses_analysis

./: .gitignore  README.md  requirements.txt
data/metrics/: metrics_XGBRegressor_2023-10-03_17-20-44_0.0508.json
data/models/: metrics_XGBRegressor_0.0507_2023-09-12_20-05-33.json  metrics_XGBRegressor_0.0511_2023-09-12_19-22-24.json  metrics_XGBRegressor_0.0511_2023-09-12_20-12-11.json  metrics_XGBRegressor_0.0511_2023-09-12_23-35-27.json  metrics_XGBRegressor_0.051_2023-09-12_19-43-00.json  metrics_XGBRegressor_0.0520_2023-09-13_15-39-29.json  metrics_XGBRegressor_0.0522_2023-09-12_21-38-36.json  metrics_XGBRegressor_0.0522_2023-09-12_23-33-27.json  metrics_XGBRegressor_0.0523_2023-09-12_20-15-19.json  metrics_XGBRegressor_0.0523_2023-09-12_20-17-43.json  metrics_XGBRegressor_0.0523_2023-09-14_02-39-09.json  metrics_XGBRegressor_0.0526_2023-09-13_16-00-20.json  metrics_XGBRegressor_0.052_2023-09-14_15-22-14.json  metrics_XGBRegressor_0.0531_2023-09-12_20-54-35.json  metrics_XGBRegressor_0.0532_2023-09-15_14-45-29.json  metrics_XGBRegressor_0.0535_2023-09-13_16-25-19.json  metrics_XGBRegressor_0.0538_2023-09-13_16-18-13.json  metrics_XGBRegressor_0.0541_2023-09-13_15-27-04.json  metrics_XGBRegressor_0.0556_2023-09-13_14-51-27.json  metrics_XGBRegressor_0.0558_2023-09-13_15-47-47.json  metrics_XGBRegressor_0.0559_2023-09-12_20-51-43.json  metrics_XGBRegressor_0.0559_2023-09-13_16-36-43.json  metrics_XGBRegressor_0.0565_2023-09-15_14-17-16.json  (+22 more)
notebooks/: 01_EDA.ipynb  02_Modeling.ipynb
src/: setup.cfg
src/utils/: functions.py  paths.py  transformers.py
(+8 files in other folders)
