[metadata]
name = utils
version = 0.1
description = 'A library for defining specific functions and procedures in the ETL process',
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
[options]
packages = find:
package_dir =
    = utils
python_requires = >=3.9
install_requires =
    matplotlib
    scikit-learn

[options.packages.find]
where = utils
